Reworked openapi and auth-service/config; Create gateway
