# services/gateway/internal/handler/handler.go
@@ -1,0 +1,7 @@
+package handler
+
+import "net/http"
+
+func Auth(w http.ResponseWriter, r *http.Request) {
+
+}
